@@ -1,3 +1,7 @@
+  24 Dec 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  ckan-1.14.3.ebuild:
+  games-util/ckan: fix git call during build & new headers
+
 *ckan-1.16.0 (24 Dec 2015)
 
   24 Dec 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
